Training loop written but stuff is breaking, to fix

--- a/stein_is.ipynb
+++ b/stein_is.ipynb
@@ -80,6 +80,25 @@
    },
    "outputs": [],
    "source": [
+    "def median(x):\n",
+    "    x = tf.reshape(x, [-1])\n",
+    "    med = tf.floordiv(tf.shape(x)[0], 2)\n",
+    "    check_parity = tf.equal(tf.to_float(med), tf.divide(tf.to_float(tf.shape(x)[0]), 2.))\n",
+    "    def is_true():\n",
+    "        return tf.reduce_sum(tf.nn.top_k(x, med+1).values[-2:]) / 2.\n",
+    "    def is_false():\n",
+    "        return tf.nn.top_k(x, med+1).values[-1]\n",
+    "    return tf.cond(check_parity, is_true, is_false) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "class stein_is(object):\n",
     "    def __init__(self, gmm_model, mu, sigma, dim, n_leaders, n_followers, step_size=0.01): # n_trials, step_size=0.01):\n",
     "        # Required parameters\n",
@@ -96,14 +115,16 @@
     "        # Set seed\n",
     "        seed = 30\n",
     "        \n",
-    "        # Intialise\n",
+    "        # Intialisation\n",
     "        self.B, self.B_density, self.A = self.initialise_variables()\n",
+    "        self.pB = self.gmm_model.log_px(self.B)\n",
     "        \n",
     "        # Register functions for debugging\n",
     "        # self.k_A_A, self.sum_grad_A_k_A_A, self.A_Squared, self.h_0 = self.construct_map()\n",
     "        # self.k_A_B, self.sum_grad_A_k_A_B, self.grad_A_grad_B_k_A_B, self.grad_B_k_A_B = self.apply_map()        \n",
-    "        self.A, self.B, self.phi_B, self.grad_B_phi_B = self.svgd_update()\n",
-    "        self.f_density = self.density_update()\n",
+    "        # self.A, self.B, self.phi_B, self.grad_B_phi_B = self.svgd_update()\n",
+    "        # self.q_density = self.density_update()\n",
+    "        \n",
     "        \n",
     "    def initialise_variables(self):\n",
     "        init_distribution = tf.contrib.distributions.MultivariateNormalDiag(self.mu * tf.ones(dim), self.sigma * tf.ones(dim))\n",
@@ -112,10 +133,10 @@
     "        # leaders = tf.reshape(init_distribution.sample(self.n_trials * self.n_leaders, seed=123), [self.n_trials, self.n_leaders, self.h_dim] \n",
     "        \n",
     "        followers = tf.reshape(init_distribution.sample(self.n_followers, seed=123), [self.n_followers, self.dim]) \n",
-    "        f_density = init_distribution.log_prob(followers)\n",
+    "        q_density = init_distribution.log_prob(followers)\n",
     "        leaders = tf.reshape(init_distribution.sample(self.n_leaders, seed=123), [self.n_leaders, self.dim])\n",
     "                           \n",
-    "        return followers, f_density, leaders\n",
+    "        return followers, q_density, leaders\n",
     "                             \n",
     "    def construct_map(self):\n",
     "        # Calculate ||leader - leader'||^2/h_0, refer to leader as A as in SteinIS\n",
@@ -154,37 +175,26 @@
     "        I = tf.eye(self.dim)\n",
     "        inv_abs_det_I_grad_B_phi = tf.map_fn(lambda x: 1./tf.abs(tf.matrix_determinant(tf.add(I, x))), self.grad_B_phi_B)\n",
     "        return tf.multiply(self.B_density, inv_abs_det_I_grad_B_phi) \n",
-    "\n",
-    "def median(x):\n",
-    "    x = tf.reshape(x, [-1])\n",
-    "    med = tf.floordiv(tf.shape(x)[0], 2)\n",
-    "    check_parity = tf.equal(tf.to_float(med), tf.divide(tf.to_float(tf.shape(x)[0]), 2.))\n",
-    "    def is_true():\n",
-    "        return tf.reduce_sum(tf.nn.top_k(x, med+1).values[-2:]) / 2.\n",
-    "    def is_false():\n",
-    "        return tf.nn.top_k(x, med+1).values[-1]\n",
-    "    return tf.cond(check_parity, is_true, is_false)                        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mu = 0.; sigma = 1.; dim = 6; n_leaders = 100; n_followers = 100;\n",
-    "model = stein_is(gmm,  mu, sigma, dim, n_leaders, n_followers)"
+    "    \n",
+    "    def main(self, iteration):\n",
+    "        for i in range(iteration):\n",
+    "            self.A, self.B, self.phi_B, self.grad_B_phi_B = self.svgd_update()\n",
+    "            self.q_density = self.density_update()\n",
+    "            print 'Iteration ', str(i), ' done'\n",
+    "        self.importance_weights = tf.divide(self.q_density, self.pB)\n",
+    "        self.normalisation_constant = 1./tf.to_float(self.n_followers) * tf.reduce_sum(self.importance_weights)\n",
+    "        self.final_B = self.B\n",
+    "        return self.final_B, self.importance_weights, self.normalisation_constant                       "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "output = sess.run([model.f_density])"
+    "mu = 0.; sigma = 1.; dim = 6; n_leaders = 100; n_followers = 100;\n",
+    "model = stein_is(gmm,  mu, sigma, dim, n_leaders, n_followers)"
    ]
   },
   {
@@ -195,7 +205,40 @@
     {
      "data": {
       "text/plain": [
-       "()"
+       "[array([ -1.03152409e+01,  -1.51769896e+01,  -6.91211319e+00,\n",
+       "         -9.09164906e+00,  -1.66581357e+00,  -3.77475023e+00,\n",
+       "         -3.40547347e+00,  -5.77358770e+00,  -5.48494339e-01,\n",
+       "         -1.16953516e+01,  -4.43257749e-01,  -7.55881071e-01,\n",
+       "         -5.07833898e-01,  -2.52877498e+00,  -3.10027575e+00,\n",
+       "         -3.16426206e+00,  -2.75525767e-02,  -9.08142948e+00,\n",
+       "         -3.49198437e+00,  -7.64666021e-01,  -8.81662941e+00,\n",
+       "         -5.76153088e+00,  -7.92342424e+00,  -3.00987768e+00,\n",
+       "         -3.99649167e+00,  -4.43154144e+00,  -1.14873905e+01,\n",
+       "         -3.34710050e+00,  -7.03338194e+00,  -1.07595420e+00,\n",
+       "         -9.31732170e-03,  -8.85389709e+00,  -8.23503304e+00,\n",
+       "         -5.73243809e+00,  -3.09585500e+00,  -7.30990982e+00,\n",
+       "         -8.96162415e+00,  -6.74901628e+00,  -7.30081940e+00,\n",
+       "         -3.87950373e+00,  -2.41132855e+00,  -8.01904774e+00,\n",
+       "         -1.48389554e+00,  -3.09095216e+00,  -4.00711834e-01,\n",
+       "         -1.04508793e+00,  -4.29516840e+00,  -4.06943232e-01,\n",
+       "         -1.02146759e+01,  -1.10012379e+01,  -4.69298649e+00,\n",
+       "         -1.15925589e+01,  -6.90844133e-02,  -7.38132381e+00,\n",
+       "         -3.10799003e+00,  -1.26729620e+00,  -8.76004410e+00,\n",
+       "         -6.98567343e+00,  -8.90620041e+00,  -7.61675310e+00,\n",
+       "         -2.47557020e+00,  -2.56837392e+00,  -4.15422678e+00,\n",
+       "         -1.18032551e+00,  -7.30593109e+00,  -5.71943617e+00,\n",
+       "         -1.05586205e+01,  -6.47064018e+00,  -7.52824879e+00,\n",
+       "         -6.15547466e+00,  -5.41308117e+00,  -7.09290648e+00,\n",
+       "         -2.77552915e+00,  -7.76052058e-01,  -9.44517994e+00,\n",
+       "         -3.00828218e+00,  -4.02175426e-01,  -9.11198902e+00,\n",
+       "         -7.40366459e-01,  -7.59360075e-01,  -8.07277775e+00,\n",
+       "         -5.90825891e+00,  -7.74029684e+00,  -5.01015234e+00,\n",
+       "         -1.67663205e+00,  -9.86841393e+00,  -1.09731722e+01,\n",
+       "         -8.03800774e+00,  -9.41464043e+00,  -9.88289547e+00,\n",
+       "         -1.03950386e+01,  -7.39561462e+00,  -1.06442595e+01,\n",
+       "         -8.66086483e+00,  -1.18180287e+00,  -1.28541303e+00,\n",
+       "         -1.28634536e+00,  -3.32834244e+00,  -4.70538425e+00,\n",
+       "         -1.03668966e+01], dtype=float32)]"
       ]
      },
      "execution_count": 8,
@@ -204,51 +247,7 @@
     }
    ],
    "source": [
-    "output[0][0].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[array([-17.76770592, -23.33740044, -15.72759342, -16.30294609,\n",
-       "        -13.1185236 , -13.15271568, -13.47410679, -14.46366501,\n",
-       "        -13.57182693, -19.8328495 , -12.7520771 , -11.94937229,\n",
-       "        -14.21317768, -12.80694866, -13.18456078, -13.71470928,\n",
-       "        -16.79034996, -16.43029976, -13.20270729, -13.75132656,\n",
-       "        -16.23462677, -14.36654472, -14.99203396, -14.96727467,\n",
-       "        -13.15204334, -14.03826427, -19.14477158, -12.66138744,\n",
-       "        -17.09630013, -15.19779301, -12.29283905, -16.01700974,\n",
-       "        -15.32056236, -14.30460453, -12.96601009, -15.25072002,\n",
-       "        -16.40987778, -14.20990944, -14.57644463, -13.33748341,\n",
-       "        -13.48271179, -15.38956642, -13.07788658, -13.06289196,\n",
-       "        -11.55906105, -12.10474968, -13.22586155, -10.84550762,\n",
-       "        -17.64623642, -18.55130577, -13.9176836 , -19.24054146,\n",
-       "        -14.15886688, -14.41825676, -12.62604523, -15.58252048,\n",
-       "        -16.09742546, -14.74546242, -16.07368279, -15.0657959 ,\n",
-       "        -13.68206501, -12.66249752, -14.10882664, -11.79558945,\n",
-       "        -16.08886147, -13.55189323, -18.04389381, -14.45329571,\n",
-       "        -14.81221676, -14.37201023, -14.23504162, -14.28787899,\n",
-       "        -13.96692562, -11.85381603, -16.84576607, -13.15099812,\n",
-       "        -28.80789185, -16.4809494 , -12.2590189 , -11.96818447,\n",
-       "        -15.15344906, -14.12467861, -16.39096069, -14.10642529,\n",
-       "        -12.35852146, -17.20976639, -18.51922798, -15.2695961 ,\n",
-       "        -17.05432892, -17.25281715, -17.84143448, -14.83737564,\n",
-       "        -18.15939903, -16.29272461, -12.74602509, -12.40869617,\n",
-       "        -14.13204575, -13.36123371, -13.55464745, -17.83107185], dtype=float32)]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "output"
+    "sess.run([model.q_density])"
    ]
   },
   {
