Keep having trouble with not finite matrix determinants for Stein IS case, to debug more

--- a/stein_is.ipynb
+++ b/stein_is.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -122,8 +122,8 @@
     "        # Register functions for debugging\n",
     "        # self.k_A_A, self.sum_grad_A_k_A_A, self.A_Squared, self.h_0 = self.construct_map()\n",
     "        # self.k_A_B, self.sum_grad_A_k_A_B, self.grad_A_grad_B_k_A_B, self.grad_B_k_A_B = self.apply_map()        \n",
-    "        # self.A, self.B, self.phi_B, self.grad_B_phi_B = self.svgd_update()\n",
-    "        # self.q_density = self.density_update()\n",
+    "        self.A, self.B, self.phi_B, self.grad_B_phi_B = self.svgd_update()\n",
+    "        self.q_density = self.density_update()\n",
     "        \n",
     "        \n",
     "    def initialise_variables(self):\n",
@@ -184,71 +184,157 @@
     "        self.importance_weights = tf.divide(self.q_density, self.pB)\n",
     "        self.normalisation_constant = 1./tf.to_float(self.n_followers) * tf.reduce_sum(self.importance_weights)\n",
     "        self.final_B = self.B\n",
-    "        return self.final_B, self.importance_weights, self.normalisation_constant                       "
+    "        return self.normalisation_constant\n",
+    "#         return self.final_B, self.importance_weights, self.normalisation_constant\n",
+    "#         return self.A, self.B"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "mu = 0.; sigma = 1.; dim = 6; n_leaders = 100; n_followers = 100;\n",
+    "mu = 0.; sigma = 3.; dim = 6; n_leaders = 100; n_followers = 100;\n",
     "model = stein_is(gmm,  mu, sigma, dim, n_leaders, n_followers)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration  0  done\n",
+      "Iteration  1  done\n",
+      "Iteration  2  done\n",
+      "Iteration  3  done\n",
+      "Iteration  4  done\n",
+      "Iteration  5  done\n",
+      "Iteration  6  done\n",
+      "Iteration  7  done\n",
+      "Iteration  8  done\n",
+      "Iteration  9  done\n",
+      "Iteration  10  done\n",
+      "Iteration  11  done\n",
+      "Iteration  12  done\n",
+      "Iteration  13  done\n",
+      "Iteration  14  done\n",
+      "Iteration  15  done\n",
+      "Iteration  16  done\n",
+      "Iteration  17  done\n",
+      "Iteration  18  done\n",
+      "Iteration  19  done\n",
+      "Iteration  20  done\n",
+      "Iteration  21  done\n",
+      "Iteration  22  done\n",
+      "Iteration  23  done\n",
+      "Iteration  24  done\n",
+      "Iteration  25  done\n",
+      "Iteration  26  done\n",
+      "Iteration  27  done\n",
+      "Iteration  28  done\n",
+      "Iteration  29  done\n",
+      "Iteration  30  done\n",
+      "Iteration  31  done\n",
+      "Iteration  32  done\n",
+      "Iteration  33  done\n",
+      "Iteration  34  done\n",
+      "Iteration  35  done\n",
+      "Iteration  36  done\n",
+      "Iteration  37  done\n",
+      "Iteration  38  done\n",
+      "Iteration  39  done\n",
+      "Iteration  40  done\n",
+      "Iteration  41  done\n",
+      "Iteration  42  done\n",
+      "Iteration  43  done\n",
+      "Iteration  44  done\n",
+      "Iteration  45  done\n",
+      "Iteration  46  done\n",
+      "Iteration  47  done\n",
+      "Iteration  48  done\n",
+      "Iteration  49  done\n",
+      "Iteration  50  done\n",
+      "Iteration  51  done\n",
+      "Iteration  52  done\n",
+      "Iteration  53  done\n",
+      "Iteration  54  done\n",
+      "Iteration  55  done\n",
+      "Iteration  56  done\n",
+      "Iteration  57  done\n",
+      "Iteration  58  done\n",
+      "Iteration  59  done\n",
+      "Iteration  60  done\n",
+      "Iteration  61  done\n",
+      "Iteration  62  done\n",
+      "Iteration  63  done\n",
+      "Iteration  64  done\n",
+      "Iteration  65  done\n",
+      "Iteration  66  done\n",
+      "Iteration  67  done\n",
+      "Iteration  68  done\n",
+      "Iteration  69  done\n",
+      "Iteration  70  done\n",
+      "Iteration  71  done\n",
+      "Iteration  72  done\n",
+      "Iteration  73  done\n",
+      "Iteration  74  done\n",
+      "Iteration  75  done\n",
+      "Iteration  76  done\n",
+      "Iteration  77  done\n",
+      "Iteration  78  done\n",
+      "Iteration  79  done\n",
+      "Iteration  80  done\n",
+      "Iteration  81  done\n",
+      "Iteration  82  done\n",
+      "Iteration  83  done\n",
+      "Iteration  84  done\n",
+      "Iteration  85  done\n",
+      "Iteration  86  done\n",
+      "Iteration  87  done\n",
+      "Iteration  88  done\n",
+      "Iteration  89  done\n",
+      "Iteration  90  done\n",
+      "Iteration  91  done\n",
+      "Iteration  92  done\n",
+      "Iteration  93  done\n",
+      "Iteration  94  done\n",
+      "Iteration  95  done\n",
+      "Iteration  96  done\n",
+      "Iteration  97  done\n",
+      "Iteration  98  done\n",
+      "Iteration  99  done\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[array([ -1.03152409e+01,  -1.51769896e+01,  -6.91211319e+00,\n",
-       "         -9.09164906e+00,  -1.66581357e+00,  -3.77475023e+00,\n",
-       "         -3.40547347e+00,  -5.77358770e+00,  -5.48494339e-01,\n",
-       "         -1.16953516e+01,  -4.43257749e-01,  -7.55881071e-01,\n",
-       "         -5.07833898e-01,  -2.52877498e+00,  -3.10027575e+00,\n",
-       "         -3.16426206e+00,  -2.75525767e-02,  -9.08142948e+00,\n",
-       "         -3.49198437e+00,  -7.64666021e-01,  -8.81662941e+00,\n",
-       "         -5.76153088e+00,  -7.92342424e+00,  -3.00987768e+00,\n",
-       "         -3.99649167e+00,  -4.43154144e+00,  -1.14873905e+01,\n",
-       "         -3.34710050e+00,  -7.03338194e+00,  -1.07595420e+00,\n",
-       "         -9.31732170e-03,  -8.85389709e+00,  -8.23503304e+00,\n",
-       "         -5.73243809e+00,  -3.09585500e+00,  -7.30990982e+00,\n",
-       "         -8.96162415e+00,  -6.74901628e+00,  -7.30081940e+00,\n",
-       "         -3.87950373e+00,  -2.41132855e+00,  -8.01904774e+00,\n",
-       "         -1.48389554e+00,  -3.09095216e+00,  -4.00711834e-01,\n",
-       "         -1.04508793e+00,  -4.29516840e+00,  -4.06943232e-01,\n",
-       "         -1.02146759e+01,  -1.10012379e+01,  -4.69298649e+00,\n",
-       "         -1.15925589e+01,  -6.90844133e-02,  -7.38132381e+00,\n",
-       "         -3.10799003e+00,  -1.26729620e+00,  -8.76004410e+00,\n",
-       "         -6.98567343e+00,  -8.90620041e+00,  -7.61675310e+00,\n",
-       "         -2.47557020e+00,  -2.56837392e+00,  -4.15422678e+00,\n",
-       "         -1.18032551e+00,  -7.30593109e+00,  -5.71943617e+00,\n",
-       "         -1.05586205e+01,  -6.47064018e+00,  -7.52824879e+00,\n",
-       "         -6.15547466e+00,  -5.41308117e+00,  -7.09290648e+00,\n",
-       "         -2.77552915e+00,  -7.76052058e-01,  -9.44517994e+00,\n",
-       "         -3.00828218e+00,  -4.02175426e-01,  -9.11198902e+00,\n",
-       "         -7.40366459e-01,  -7.59360075e-01,  -8.07277775e+00,\n",
-       "         -5.90825891e+00,  -7.74029684e+00,  -5.01015234e+00,\n",
-       "         -1.67663205e+00,  -9.86841393e+00,  -1.09731722e+01,\n",
-       "         -8.03800774e+00,  -9.41464043e+00,  -9.88289547e+00,\n",
-       "         -1.03950386e+01,  -7.39561462e+00,  -1.06442595e+01,\n",
-       "         -8.66086483e+00,  -1.18180287e+00,  -1.28541303e+00,\n",
-       "         -1.28634536e+00,  -3.32834244e+00,  -4.70538425e+00,\n",
-       "         -1.03668966e+01], dtype=float32)]"
+       "[0.82154536]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sess.run([model.q_density])"
+    "sess.run([model.main(100)])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
