Further debugging with tf.gradients

--- a/stein_is.ipynb
+++ b/stein_is.ipynb
@@ -36,7 +36,7 @@
     "def median(x):\n",
     "    x = tf.reshape(x, [-1])\n",
     "    med = tf.floordiv(tf.shape(x)[0], 2)\n",
-    "    check_parity = tf.equal(tf.to_float(med), tf.divide(tf.to_float(tf.shape(x)[0]), 2.))\n",
+    "    check_parity = tf.equal(tf.to_double(med), tf.divide(tf.to_double(tf.shape(x)[0]), 2.))\n",
     "    def is_true():\n",
     "        return 0.5 * tf.reduce_sum(tf.nn.top_k(x, med+1).values[-2:]) \n",
     "    def is_false():\n",
@@ -220,21 +220,22 @@
    },
    "outputs": [],
    "source": [
-    "# mu = 0.; sigma = 3.; dim = 6; n_leaders = 100; n_followers = 100;\n",
-    "initial_mu = np.float32(0.)\n",
-    "initial_sigma = np.float32(1.)\n",
-    "n_leaders = 100\n",
-    "n_followers = 100\n",
-    "model = SteinIS(gmm, initial_mu, initial_sigma, dim, n_leaders, n_followers)"
+    "# # mu = 0.; sigma = 3.; dim = 6; n_leaders = 100; n_followers = 100;\n",
+    "# initial_mu = np.float32(0.)\n",
+    "# initial_sigma = np.float32(1.)\n",
+    "# n_leaders = 100\n",
+    "# n_followers = 100\n",
+    "# model = SteinIS(gmm, initial_mu, initial_sigma, dim, n_leaders, n_followers)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "[w] = sess.run([tf.gradients(model.sum_grad_A_k_A_B, model.B)])"
+    "x = np.arange(16.0).reshape((4,4))\n",
+    "[w] = sess.run([median(x)])"
    ]
   },
   {
@@ -269,115 +270,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[array([[  5.79536295e+00,   5.79536295e+00],\n",
-       "        [ -2.18037513e-07,   1.39349154e-07],\n",
-       "        [  6.27294412e-07,  -8.71084410e-07],\n",
-       "        [ -1.64126527e+00,   3.58454108e-01],\n",
-       "        [ -1.90087390e-04,  -2.88216688e-05],\n",
-       "        [ -2.72020634e-16,  -5.82042131e-17],\n",
-       "        [ -6.11541218e-09,  -1.37098888e-09],\n",
-       "        [  2.87248719e-12,  -1.03976142e-11],\n",
-       "        [  1.45082653e-01,  -8.06589946e-02],\n",
-       "        [ -3.71138594e-06,   2.95813470e-06],\n",
-       "        [  1.03637021e-12,  -1.59385818e-12],\n",
-       "        [ -6.43289013e-07,   3.13343179e-07],\n",
-       "        [  2.35033895e-07,  -4.94986921e-07],\n",
-       "        [ -2.46110857e-11,   1.61467974e-11],\n",
-       "        [ -1.43497506e-24,   4.98765048e-25],\n",
-       "        [  5.93418710e-18,  -1.07137235e-17],\n",
-       "        [ -1.49860404e-16,   1.03180392e-16],\n",
-       "        [ -8.53421153e-12,   4.90776690e-12],\n",
-       "        [  1.51301744e-08,  -1.40629766e-08],\n",
-       "        [ -2.03798801e-16,   1.40174821e-16],\n",
-       "        [  0.00000000e+00,   0.00000000e+00],\n",
-       "        [  3.21912169e-02,   2.15754565e-02],\n",
-       "        [ -1.83964753e+00,  -3.78275871e-01],\n",
-       "        [ -6.89038604e-24,   2.53966471e-24],\n",
-       "        [ -3.55463228e-12,   5.05659924e-12],\n",
-       "        [  8.92602259e-07,  -1.52621999e-06],\n",
-       "        [ -1.14071426e-11,   5.72282196e-12],\n",
-       "        [ -3.00550834e-10,   9.67958075e-11],\n",
-       "        [ -2.74970887e-07,   4.38495746e-08],\n",
-       "        [ -6.84131082e-05,   4.33027089e-05],\n",
-       "        [  4.12523270e-01,   3.45352554e+00],\n",
-       "        [ -1.66515831e-03,   3.38234310e-03],\n",
-       "        [  1.83103512e-05,  -3.55634838e-05],\n",
-       "        [ -5.60060202e-04,   1.41640718e-04],\n",
-       "        [ -3.05940875e-06,   1.07841288e-06],\n",
-       "        [  3.09283332e-09,   1.74019310e-09],\n",
-       "        [ -1.75073114e-03,  -3.20483581e-04],\n",
-       "        [ -3.32070658e-06,   2.49508230e-06],\n",
-       "        [ -1.42257102e-02,  -1.38377864e-03],\n",
-       "        [ -2.77402047e-02,   5.90174720e-02],\n",
-       "        [ -2.17048089e-20,   1.24842694e-20],\n",
-       "        [ -2.27886510e-08,   7.37423456e-10],\n",
-       "        [ -4.07824554e-02,   7.37409852e-03],\n",
-       "        [ -2.86950637e-03,   8.87913280e-04],\n",
-       "        [  2.09296053e-10,  -1.43014905e-10],\n",
-       "        [ -1.85818815e+00,   1.41925216e+00],\n",
-       "        [ -5.15444243e-10,   1.25356669e-11],\n",
-       "        [ -2.71585394e-14,  -2.94226212e-16],\n",
-       "        [ -1.20050588e-16,   8.92066777e-17],\n",
-       "        [ -2.40350533e+00,   9.72441912e-01],\n",
-       "        [ -4.57837521e-18,   2.40222473e-18],\n",
-       "        [ -1.77390604e-07,   2.80942459e-07],\n",
-       "        [  9.50920060e-02,  -5.18771447e-03],\n",
-       "        [ -8.28533173e-02,   3.07583237e+00],\n",
-       "        [ -3.07221003e-02,  -2.53289882e-02],\n",
-       "        [ -9.90871621e-12,   2.37983765e-12],\n",
-       "        [ -8.30996711e-08,   1.78533767e-07],\n",
-       "        [ -2.02788920e-15,   4.82662243e-16],\n",
-       "        [  3.28151726e-19,  -1.47077345e-18],\n",
-       "        [  7.43252437e-09,  -3.07786285e-09],\n",
-       "        [ -6.39299884e-08,   9.81186616e-08],\n",
-       "        [ -4.03977090e-13,   3.17268320e-14],\n",
-       "        [ -9.33942160e-13,   5.80036724e-13],\n",
-       "        [ -7.55831649e-13,  -1.52741684e-13],\n",
-       "        [ -1.35686823e-10,   5.86286852e-11],\n",
-       "        [ -4.41794796e-08,   9.36354017e-09],\n",
-       "        [  3.19687475e-04,  -3.92193469e-04],\n",
-       "        [ -1.30877384e-12,   3.34219821e-13],\n",
-       "        [ -1.70027511e-06,   1.63333027e-06],\n",
-       "        [ -3.11530209e+00,  -1.83846664e+00],\n",
-       "        [ -8.57260078e-03,  -1.13442587e-03],\n",
-       "        [ -1.90609193e+00,   6.04007244e-01],\n",
-       "        [  7.96509348e-03,  -8.61149374e-03],\n",
-       "        [  1.25467977e-06,  -2.35853167e-06],\n",
-       "        [ -3.08377171e+00,   1.49740696e-01],\n",
-       "        [  7.30684519e-01,   2.12994289e+00],\n",
-       "        [ -4.19157396e-25,   4.14728435e-25],\n",
-       "        [ -5.71925938e-03,   3.44994757e-03],\n",
-       "        [  6.57924730e-03,   8.89963412e-04],\n",
-       "        [ -5.80350957e-07,  -1.37076768e-08],\n",
-       "        [ -9.07159250e-17,   1.76644933e-17],\n",
-       "        [ -6.20644132e-05,   3.39413527e-05],\n",
-       "        [ -1.07408422e-11,   9.25460750e-12],\n",
-       "        [  3.00449017e-07,   3.24913373e-07],\n",
-       "        [ -2.72263223e-13,   1.14225632e-13],\n",
-       "        [ -2.61617794e-09,   9.03122022e-11],\n",
-       "        [ -6.87170599e-04,   2.16637956e-04],\n",
-       "        [ -7.24377145e-08,   2.79433987e-08],\n",
-       "        [ -2.55055241e-02,   6.91651925e-03],\n",
-       "        [ -1.33574512e-02,  -9.44868568e-03],\n",
-       "        [ -1.56285218e-09,   1.16605747e-09],\n",
-       "        [ -2.48483177e-02,   4.70869802e-03],\n",
-       "        [ -2.55928421e+00,   2.86472082e-01],\n",
-       "        [  4.31790113e+00,   1.97720575e+00],\n",
-       "        [ -1.21522141e+00,   6.10770583e-01],\n",
-       "        [ -1.65335392e-03,  -2.32022372e-04],\n",
-       "        [ -9.53912171e-10,   6.45117071e-10],\n",
-       "        [ -1.53132285e-09,   1.08910103e-09],\n",
-       "        [ -2.88466072e-06,   3.56345527e-06],\n",
-       "        [  1.38664484e+00,  -1.30815136e+00]], dtype=float32)]"
+       "7.5"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
