Resorted to hard coding

--- a/stein_is.ipynb
+++ b/stein_is.ipynb
@@ -97,19 +97,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class SteinIS(object):\n",
@@ -138,7 +127,7 @@
     "        # Register functions for debugging\n",
     "        self.k_A_A, self.sum_grad_A_k_A_A, self.A_Squared, self.h = self.construct_map()\n",
     "        self.k_A_B, self.sum_grad_A_k_A_B = self.apply_map()        \n",
-    "        # self.A, self.B, self.grad_B_k_A_B, self.grad_B_sum_grad_A_k_A_B, self.grad_B_phi_B_ = self.svgd_update()\n",
+    "        self.n_A, self.n_B = self.svgd_update()\n",
     "        # self.q_density = self.density_update()\n",
     "        \n",
     "        \n",
@@ -163,8 +152,9 @@
     "        h = tf.stop_gradient(h_num / h_dem)\n",
     "        k_A_A = tf.exp(-A_A_Distance_Squared / h)\n",
     "        # Can't use vanilla tf.gradients as it sums dy/dx wrt to dx, want sum dy/dx wrt to dy, tf.map_fn is not available\n",
-    "        sum_grad_A_k_A_A = tf.stack([tf.reduce_sum(tf.gradients(k_A_A[i, :], self.A)[0], axis=0) for i in range(self.n_leaders)])\n",
-    "        return k_A_A, sum_grad_A_k_A_A, A_Squared, h\n",
+    "        # tf.gradients also do not provide accurate gradients in this case\n",
+    "        sum_grad_A_k_A_A = tf.stack([tf.matmul(tf.reshape(k_A_A[:, i], (1, -1)), -2 * (self.A - self.A[i]) / h) for i in range(self.n_leaders)])\n",
+    "        return k_A_A, tf.squeeze(sum_grad_A_k_A_A), A_Squared, h\n",
     "        \n",
     "    def apply_map(self):\n",
     "        # Calculate ||leader - follower||^2/h_0, refer to follower as B as in SteinIS\n",
@@ -172,8 +162,8 @@
     "        B_Squared = tf.reduce_sum(tf.square(self.B), keep_dims=True, axis=1)\n",
     "        A_B_Distance_Squared = self.A_Squared - x2_A_B_T + tf.transpose(B_Squared)\n",
     "        k_A_B = tf.exp(-A_B_Distance_Squared / self.h)\n",
-    "        sum_grad_A_k_A_B = tf.stack([tf.reduce_sum(tf.gradients(k_A_B[i, :], self.A)[0], axis=0) for i in range(self.n_leaders)])\n",
-    "        return k_A_B, sum_grad_A_k_A_B\n",
+    "        sum_grad_A_k_A_B = tf.stack([tf.matmul(tf.reshape(k_A_B[:, i], (1, -1)), -2 * (self.A - self.B[i]) / self.h) for i in range(self.n_followers)])\n",
+    "        return k_A_B, tf.squeeze(sum_grad_A_k_A_B)\n",
     "                    \n",
     "    def svgd_update(self):\n",
     "        self.k_A_A, self.sum_grad_A_k_A_A, self.A_Squared, self.h = self.construct_map()\n",
@@ -182,16 +172,17 @@
     "        sum_d_log_pA_T_k_A_A = tf.matmul(self.k_A_A, self.d_log_pA)\n",
     "        phi_A = (sum_d_log_pA_T_k_A_A + self.sum_grad_A_k_A_A) / self.n_leaders\n",
     "        A = self.A + self.step_size * phi_A  \n",
-    "        sum_d_log_pA_T_k_A_B = tf.matmul(self.k_A_B, self.d_log_pA)\n",
+    "        sum_d_log_pA_T_k_A_B = tf.matmul(tf.transpose(self.k_A_B), self.d_log_pA)\n",
     "        phi_B = (sum_d_log_pA_T_k_A_B + self.sum_grad_A_k_A_B) / self.n_leaders\n",
     "        B = self.B + self.step_size * phi_B \n",
-    "        # Probably have to fix this too\n",
-    "        # grad_B_phi_B = [tf.gradients(phi_B[i, :], self.B)[0] for i in range(self.n_followers)]\n",
-    "        # grad_B_phi_B = tf.convert_to_tensor(grad_B_phi_B)\n",
-    "        grad_B_k_A_B = [tf.gradients(self.k_A_B[:, i], self.B)[0] for i in range(self.n_followers)]\n",
-    "        grad_B_sum_grad_A_k_A_B = [tf.gradients(self.sum_grad_A_k_A_B[0], self.B)[0] for i in range(self.n_followers)]\n",
-    "        grad_B_phi_B_ = tf.gradients(phi_B, self.B)\n",
-    "        return A, B, grad_B_k_A_B, grad_B_sum_grad_A_k_A_B, grad_B_phi_B_\n",
+    "        # See http://mlg.eng.cam.ac.uk/mchutchon/DifferentiatingGPs.pdf\n",
+    "        grad_B_sum_grad_A_k_A_B = []\n",
+    "        for i in range(self.n_followers):\n",
+    "            x = (self.A - self.B[i]) / self.h\n",
+    "            term_2 = tf.matmul(tf.tranpose(x), tf.matmul(tf.diag(k_A_B[:, i]), x))\n",
+    "            term_1 = (tf.reduce_sum(k_A_B[:, i] / self.h) * tf.eye(self.dim)\n",
+    "            grad_B_sum_grad_A_k_A_B.append(4 * (term_1 - term_2))\n",
+    "        return A, B #, grad_B_k_A_B, grad_B_sum_grad_A_k_A_B, grad_B_phi_B_\n",
     "    \n",
     "    def density_update(self):\n",
     "        I = tf.eye(self.dim)\n",
@@ -214,28 +205,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# # mu = 0.; sigma = 3.; dim = 6; n_leaders = 100; n_followers = 100;\n",
-    "# initial_mu = np.float32(0.)\n",
-    "# initial_sigma = np.float32(1.)\n",
-    "# n_leaders = 100\n",
-    "# n_followers = 100\n",
-    "# model = SteinIS(gmm, initial_mu, initial_sigma, dim, n_leaders, n_followers)"
+    "# mu = 0.; sigma = 3.; dim = 6; n_leaders = 100; n_followers = 100;\n",
+    "initial_mu = np.float32(0.)\n",
+    "initial_sigma = np.float32(1.)\n",
+    "n_leaders = 100\n",
+    "n_followers = 200\n",
+    "model = SteinIS(gmm, initial_mu, initial_sigma, dim, n_leaders, n_followers)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = np.arange(16.0).reshape((4,4))\n",
-    "[w] = sess.run([median(x)])"
+    "[w, x] = sess.run([model.n_A, model.n_B])"
    ]
   },
   {
@@ -270,22 +258,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7.5"
+       "((100, 2), (200, 2))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "w"
+    "w.shape, x.shape"
    ]
   },
   {
